# pattern-drift

./: .gitignore  README.md  Research Papers.txt  architecture.html  pyproject.toml
docs/: configuration-report.md  presentation.md  system-report.md
docs/papers/: DOWNLOAD_LOG.md  download_papers.py
pattern_drift/: __init__.py  classifier.py  dispatcher.py  feature_extractor.py  monitor.py  result.py  sklearn_wrapper.py  window_engine.py
pattern_drift/detectors/: __init__.py  adwin.py  base.py  ddm.py  kswin.py  page_hinkley.py
tests/: test_callbacks.py  test_detectors.py  test_drift_classification.py  test_false_positive_rate.py  test_monitor.py  test_multi_feature_isolation.py  test_property_based.py  test_reset_isolation.py  test_retraining_window.py  test_sensitivity_calibration.py  test_sklearn_pipeline.py  test_synthetic_streams.py  test_window_engine.py  test_yaml_config.py
