[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pattern-drift"
version = "0.1.1"
description = "Automatic concept drift detection for streaming datasets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["machine-learning", "concept-drift", "streaming", "mlops", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# No mandatory runtime dependencies — pure Python stdlib only
dependencies = []

[project.optional-dependencies]
viz = ["matplotlib>=3.5"]
alerts = ["requests>=2.28"]
yaml = ["pyyaml>=6.0"]
pandas = ["pandas>=1.5"]
sklearn = ["scikit-learn>=1.1"]
all = [
    "matplotlib>=3.5",
    "requests>=2.28",
    "pyyaml>=6.0",
    "pandas>=1.5",
    "scikit-learn>=1.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pyyaml>=6.0",
    "pandas>=1.5",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/muhammadsufiyanbaig/pattern-drift"
"Bug Tracker" = "https://github.com/muhammadsufiyanbaig/pattern-drift/issues"

[tool.setuptools.packages.find]
include = ["pattern_drift*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["pattern_drift"]
omit = ["tests/*"]
